--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -533,3 +533,85 @@ SQL1_1 = SELECT license, class, color, finish, rims, windows, lights, skin, stat
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8-String, 9-String, 10-String, 11-String, 12-String
+
+
+;; --------------------------------------------------------------------------------
+;; SLPD Computer
+;; --------------------------------------------------------------------------------
+
+[insertSLPDWanted]
+SQL_1 = INSERT INTO slpd_wanted (uid_suspect, uid_officer, charges, wanted_level) VALUES (?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4
+Number of Inputs = 4
+
+[insertSLPDWantedVehicle]
+SQL_1 = INSERT INTO slpd_wanted_vehicle (plate, description, uid_officer, reason, wanted_level) VALUES (?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5
+Number of Inputs = 5
+
+[insertSLPDTicket]
+SQL_1 = INSERT INTO slpd_tickets (uid_officer, uid_player, amount, reason, points) VALUES (?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5
+Number of Inputs = 5
+
+[updateSLPDWanted_wanted]
+SQL_1 = UPDATE slpd_wanted SET wanted_level=? WHERE id=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[updateSLPDWanted_close]
+SQL_1 = UPDATE slpd_wanted SET wanted_level=0, active=0, uid_closed=? WHERE id=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+ 
+[updateSLPDWantedVehicle_wanted]
+SQL_1 = UPDATE slpd_wanted_vehicle SET wanted_level=? WHERE id=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[updateSLPDWantedVehicle_close]
+SQL_1 = UPDATE slpd_wanted_vehicle SET wanted_level=0, active=0, uid_closed=? WHERE id=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
+
+[getSLPDWanted_case]
+SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.id=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
+
+[getSLPDWanted_active]
+SQL_1 = SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.active=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
+
+[getSLPDWanted_uid]
+SQL_1 = SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.uid_suspect=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
+
+[getSLPDWantedVehicle_case]
+SQL_1 = SELECT slpd_wanted_vehicle.id, slpd_wanted_vehicle.plate, slpd_wanted_vehicle.description, slpd_wanted_vehicle.uid_officer, users.name, slpd_wanted_vehicle.reason, slpd_wanted_vehicle.wanted_level, slpd_wanted_vehicle.active FROM slpd_wanted_vehicle INNER JOIN users ON slpd_wanted_vehicle.uid_officer=users.uid WHERE slpd_wanted_vehicle.id=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
+
+[getSLPDWantedVehicle_active]
+SQL_1 = SELECT slpd_wanted_vehicle.id, slpd_wanted_vehicle.plate, slpd_wanted_vehicle.description, slpd_wanted_vehicle.uid_officer, users.name, slpd_wanted_vehicle.reason, slpd_wanted_vehicle.wanted_level, slpd_wanted_vehicle.active FROM slpd_wanted_vehicle INNER JOIN users ON slpd_wanted_vehicle.uid_officer=users.uid WHERE slpd_wanted_vehicle.active=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
+
+[getSLPDWantedVehicle_plate]
+SQL_1 = SELECT slpd_wanted_vehicle.id, slpd_wanted_vehicle.plate, slpd_wanted_vehicle.description, slpd_wanted_vehicle.uid_officer, users.name, slpd_wanted_vehicle.reason, slpd_wanted_vehicle.wanted_level, slpd_wanted_vehicle.active FROM slpd_wanted_vehicle INNER JOIN users ON slpd_wanted_vehicle.uid_officer=users.uid WHERE slpd_wanted_vehicle.plate=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
+
+[getSLPDticket_uid]
+SQL1_1 = SELECT slpd_tickets.id, slpd_tickets.uid_player, suspect.name, slpd_tickets.uid_officer, officer.name, slpd_tickets.reason, slpd_tickets.amount, slpd_tickets.points FROM slpd_tickets INNER JOIN users AS suspect ON slpd_tickets.uid_player=suspect.uid INNER JOIN users AS officer ON slpd_tickets.uid_officer=officer.uid WHERE slpd_tickets.uid_player=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
