--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -581,13 +581,13 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_active]
-SQL_1 = SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.active=?
+SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.active=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_uid]
-SQL_1 = SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.uid_suspect=?
+SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.uid_suspect=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
