--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -575,43 +575,43 @@ SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 [getSLPDWanted_case]
-SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.id=?
+SQL_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.id=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_active]
-SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.active=?
+SQL_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.active=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_uid]
-SQL_1 = SELECT slpd_wanted.id, slpd_wanted.uid_suspect, suspect.name, slpd_wanted.uid_officer, officer.name, slpd_wanted.charges, slpd_wanted.wanted_level, slpd_wanted.active FROM slpd_wanted INNER JOIN users AS suspect ON slpd_wanted.uid_suspect=suspect.uid INNER JOIN users AS officer ON slpd_wanted.uid_officer=officer.uid WHERE slpd_wanted.uid_suspect=?
+SQL_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_case]
-SQL_1 = SELECT slpd_wanted_vehicle.id, slpd_wanted_vehicle.plate, slpd_wanted_vehicle.description, slpd_wanted_vehicle.uid_officer, users.name, slpd_wanted_vehicle.reason, slpd_wanted_vehicle.wanted_level, slpd_wanted_vehicle.active FROM slpd_wanted_vehicle INNER JOIN users ON slpd_wanted_vehicle.uid_officer=users.uid WHERE slpd_wanted_vehicle.id=?
+SQL_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.id=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_active]
-SQL_1 = SELECT slpd_wanted_vehicle.id, slpd_wanted_vehicle.plate, slpd_wanted_vehicle.description, slpd_wanted_vehicle.uid_officer, users.name, slpd_wanted_vehicle.reason, slpd_wanted_vehicle.wanted_level, slpd_wanted_vehicle.active FROM slpd_wanted_vehicle INNER JOIN users ON slpd_wanted_vehicle.uid_officer=users.uid WHERE slpd_wanted_vehicle.active=?
+SQL_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.active=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_plate]
-SQL_1 = SELECT slpd_wanted_vehicle.id, slpd_wanted_vehicle.plate, slpd_wanted_vehicle.description, slpd_wanted_vehicle.uid_officer, users.name, slpd_wanted_vehicle.reason, slpd_wanted_vehicle.wanted_level, slpd_wanted_vehicle.active FROM slpd_wanted_vehicle INNER JOIN users ON slpd_wanted_vehicle.uid_officer=users.uid WHERE slpd_wanted_vehicle.plate=?
+SQL_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.plate=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDticket_uid]
-SQL1_1 = SELECT slpd_tickets.id, slpd_tickets.uid_player, suspect.name, slpd_tickets.uid_officer, officer.name, slpd_tickets.reason, slpd_tickets.amount, slpd_tickets.points FROM slpd_tickets INNER JOIN users AS suspect ON slpd_tickets.uid_player=suspect.uid INNER JOIN users AS officer ON slpd_tickets.uid_officer=officer.uid WHERE slpd_tickets.uid_player=?
+SQL1_1 = SELECT t.id, t.uid_player, s.name, t.uid_officer, o.name, t.reason, t.amount, t.points FROM slpd_tickets t JOIN users s ON t.uid_player=s.uid JOIN users o ON t.uid_officer=o.uid WHERE t.uid_player=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
