--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -540,72 +540,72 @@ OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8-String, 9-String
 ;; --------------------------------------------------------------------------------
 
 [insertSLPDWanted]
-SQL_1 = INSERT INTO slpd_wanted (uid_suspect, uid_officer, charges, wanted_level) VALUES (?,?,?,?)
+SQL1_1 = INSERT INTO slpd_wanted (uid_suspect, uid_officer, charges, wanted_level) VALUES (?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4
 Number of Inputs = 4
 
 [insertSLPDWantedVehicle]
-SQL_1 = INSERT INTO slpd_wanted_vehicle (plate, description, uid_officer, reason, wanted_level) VALUES (?,?,?,?,?)
+SQL1_1 = INSERT INTO slpd_wanted_vehicle (plate, description, uid_officer, reason, wanted_level) VALUES (?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5
 Number of Inputs = 5
 
 [insertSLPDTicket]
-SQL_1 = INSERT INTO slpd_tickets (uid_officer, uid_player, amount, reason, points) VALUES (?,?,?,?,?)
+SQL1_1 = INSERT INTO slpd_tickets (uid_officer, uid_player, amount, reason, points) VALUES (?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5
 Number of Inputs = 5
 
 [updateSLPDWanted_wanted]
-SQL_1 = UPDATE slpd_wanted SET wanted_level=? WHERE id=?
+SQL1_1 = UPDATE slpd_wanted SET wanted_level=? WHERE id=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 [updateSLPDWanted_close]
-SQL_1 = UPDATE slpd_wanted SET wanted_level=0, active=0, uid_closed=? WHERE id=?
+SQL1_1 = UPDATE slpd_wanted SET wanted_level=0, active=0, uid_closed=? WHERE id=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
  
 [updateSLPDWantedVehicle_wanted]
-SQL_1 = UPDATE slpd_wanted_vehicle SET wanted_level=? WHERE id=?
+SQL1_1 = UPDATE slpd_wanted_vehicle SET wanted_level=? WHERE id=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 [updateSLPDWantedVehicle_close]
-SQL_1 = UPDATE slpd_wanted_vehicle SET wanted_level=0, active=0, uid_closed=? WHERE id=?
+SQL1_1 = UPDATE slpd_wanted_vehicle SET wanted_level=0, active=0, uid_closed=? WHERE id=?
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 
 [getSLPDWanted_case]
-SQL_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.id=?
+SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.id=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_active]
-SQL_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.active=?
+SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.active=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_uid]
-SQL_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=?
+SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_case]
-SQL_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.id=?
+SQL1_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.id=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_active]
-SQL_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.active=?
+SQL1_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.active=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_plate]
-SQL_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.plate=?
+SQL1_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.plate=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
