--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -587,9 +587,9 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_uid]
-SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=?
-SQL1_INPUTS = 1
-Number of Inputs = 1
+SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=? AND w.active=?
+SQL1_INPUTS = 1, 2
+Number of Inputs = 2
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_case]
@@ -615,3 +615,9 @@ SQL1_1 = SELECT t.id, t.uid_player, s.name, t.uid_officer, o.name, t.reason, t.a
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
+
+[getSLPDplayerInfo_uid]
+SQL1_1 = SELECT uid, name, cop, ems, fire, legal, statuses, cash, bank, houselevel FROM users WHERE uid=?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String, 2-String, 3, 4, 5, 6, 7, 8, 9, 10
