--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -540,14 +540,14 @@ OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8-String, 9-String
 ;; --------------------------------------------------------------------------------
 
 [insertSLPDWanted]
-SQL1_1 = INSERT INTO slpd_wanted (uid_suspect, uid_officer, charges, wanted_level) VALUES (?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4
-Number of Inputs = 4
-
-[insertSLPDWantedVehicle]
-SQL1_1 = INSERT INTO slpd_wanted_vehicle (plate, description, uid_officer, reason, wanted_level) VALUES (?,?,?,?,?)
+SQL1_1 = INSERT INTO slpd_wanted (uid_suspect, uid_officer, charges, wanted_level, active) VALUES (?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5
 Number of Inputs = 5
+
+[insertSLPDWantedVehicle]
+SQL1_1 = INSERT INTO slpd_wanted_vehicle (plate, description, uid_officer, reason, wanted_level, active) VALUES (?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6
+Number of Inputs = 6
 
 [insertSLPDTicket]
 SQL1_1 = INSERT INTO slpd_tickets (uid_officer, uid_player, amount, reason, points) VALUES (?,?,?,?,?)
