--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -605,8 +605,10 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDVehicle_plate]
+SQL1_1 = SELECT g.license, g.class, g.color, g.finish, g.owner, u.name FROM garage g JOIN users u ON g.owner=u.uid WHERE g.license=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
+OUTPUT = 1-String, 2-String, 3-String, 4-String, 5-String, 6-String
 
 [getSLPDWantedVehicle_plate]
 SQL1_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.plate=?
