--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -581,13 +581,13 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_active]
-SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.active=?
+SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.active=? ORDER BY w.wanted_level DESC, w.id ASC
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_uid]
-SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=? AND w.active=?
+SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=? AND w.active=? ORDER BY w.wanted_level DESC, w.id ASC
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
@@ -599,7 +599,7 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_active]
-SQL1_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.active=?
+SQL1_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.active=? ORDER BY v.wanted_level DESC, v.id ASC
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
@@ -627,3 +627,9 @@ SQL1_1 = SELECT uid, name, cop, ems, fire, legal, statuses, cash, bank, houselev
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1-String, 2-String, 3, 4, 5, 6, 7, 8, 9, 10
+
+[getSLPDplayerInfo_name]
+SQL1_1 = SELECT uid FROM users WHERE name LIKE ?
+SQL1_INPUTS = 1
+Number of Inputs = 1
+OUTPUT = 1-String
