--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -328,51 +328,6 @@ SQL1_1 = INSERT INTO wanted (suspectName, suspectUID, officerName, officerUID, c
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
 Number of Inputs = 8
 
-[logEvent]
-SQL1_1 = INSERT INTO logs (uid, name, type, text, cash, bank, pos) VALUES (?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
-Number of Inputs = 7
-
-[actionLog]
-SQL1_1 = INSERT INTO actionlog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
-
-[vehicleLog]
-SQL1_1 = INSERT INTO vehiclelog (playerUID, playerName, playerCash, playerBank, type, text, vehicleClassname, vehicleName, amount) VALUES (?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
-Number of Inputs = 9
-
-[moneyLog]
-SQL1_1 = INSERT INTO moneylog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
-
-[copLog]
-SQL1_1 = INSERT INTO coplog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
-
-[deathLog]
-SQL1_1 = INSERT INTO deathlog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, weapon, distance) VALUES (?,?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
-Number of Inputs = 12
-
-[economyLog]
-SQL1_1 = INSERT INTO economylog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, price, item, quantity) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
-Number of Inputs = 13
-
-[adminLog]
-SQL1_1 = INSERT INTO adminlog (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
-
-[craftLog]
-SQL1_1 = INSERT INTO craftlog (playerUID, playerName, playerCash, playerBank, type, text, classname, name) VALUES (?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
-Number of Inputs = 8
-
 ; --------------------------------------------------------------------------------
 ; DELETE
 ; --------------------------------------------------------------------------------
@@ -633,3 +588,57 @@ SQL1_1 = SELECT uid FROM users WHERE name LIKE ?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1-String
+
+;; --------------------------------------------------------------------------------
+;; Log system
+;; --------------------------------------------------------------------------------
+
+[actionLog]
+SQL1_1 = INSERT INTO log_action (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
+[vehicleLog]
+SQL1_1 = INSERT INTO log_vehicle (playerUID, playerName, playerCash, playerBank, type, text, vehicleClassname, vehicleName, amount) VALUES (?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
+Number of Inputs = 9
+
+[moneyLog]
+SQL1_1 = INSERT INTO log_money (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
+[copLog]
+SQL1_1 = INSERT INTO log_cop (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
+[deathLog]
+SQL1_1 = INSERT INTO log_death (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, weapon, distance) VALUES (?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
+Number of Inputs = 12
+
+[economyLog]
+SQL1_1 = INSERT INTO log_economy (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, price, item, quantity) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+Number of Inputs = 13
+
+[adminLog]
+SQL1_1 = INSERT INTO log_admin (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
+[craftLog]
+SQL1_1 = INSERT INTO log_craft (playerUID, playerName, playerCash, playerBank, type, text, classname, name) VALUES (?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+Number of Inputs = 8
+
+[jobLog]
+SQL1_1 = INSERT INTO log_job (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
+
+[connectionLog]
+SQL1_1 = INSERT INTO log_connection (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
+Number of Inputs = 11
