--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -616,3 +616,8 @@ Number of Inputs = 11
 SQL1_1 = INSERT INTO log_connection (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
 Number of Inputs = 11
+
+[speedcamLog]
+SQL1_1 = INSERT INTO log_speedcam (playerUID, playerName, playerCash, playerBank, type, text, speed, price) VALUES (?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+Number of Inputs = 8
