--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -558,7 +558,7 @@ Number of Inputs = 1
 OUTPUT = 1-String, 2-String, 3, 4, 5, 6, 7, 8, 9, 10
 
 [getSLPDplayerInfo_name]
-SQL1_1 = SELECT uid FROM users WHERE name LIKE ?
+SQL1_1 = SELECT uid FROM users WHERE name=?
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1-String
