inventory to logs

--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -568,56 +568,51 @@ OUTPUT = 1-String
 ;; --------------------------------------------------------------------------------
 
 [actionLog]
-SQL1_1 = INSERT INTO log_action (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
-
-[vehicleLog]
-SQL1_1 = INSERT INTO log_vehicle (playerUID, playerName, playerCash, playerBank, type, text, vehicleClassname, vehicleName, amount) VALUES (?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
-Number of Inputs = 9
-
-[moneyLog]
-SQL1_1 = INSERT INTO log_money (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
-
-[copLog]
-SQL1_1 = INSERT INTO log_cop (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
-
-[deathLog]
-SQL1_1 = INSERT INTO log_death (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, weapon, distance) VALUES (?,?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12
-Number of Inputs = 12
-
-[economyLog]
-SQL1_1 = INSERT INTO log_economy (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, price, item, quantity) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_1 = INSERT INTO log_action (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitBank, unitInv, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 Number of Inputs = 13
 
+[vehicleLog]
+SQL1_1 = INSERT INTO log_vehicle (playerUID, playerName, playerCash, playerBank, playerInv, type, text, vehicleClassname, vehicleName, amount) VALUES (?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
+Number of Inputs = 10
+
+[moneyLog]
+SQL1_1 = INSERT INTO log_money (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitBank, unitInv, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+Number of Inputs = 13
+
+[copLog]
+SQL1_1 = INSERT INTO log_cop (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitBank, unitInv, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+Number of Inputs = 13
+
+[deathLog]
+SQL1_1 = INSERT INTO log_death (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitInv, unitBank, weapon, distance) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14
+Number of Inputs = 14
+
+[economyLog]
+SQL1_1 = INSERT INTO log_economy (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitBank, unitInv, price, item, quantity) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15
+Number of Inputs = 15
+
 [adminLog]
-SQL1_1 = INSERT INTO log_admin (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
+SQL1_1 = INSERT INTO log_admin (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitBank, unitInv, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+Number of Inputs = 13
 
 [craftLog]
-SQL1_1 = INSERT INTO log_craft (playerUID, playerName, playerCash, playerBank, type, text, classname, name) VALUES (?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
-Number of Inputs = 8
+SQL1_1 = INSERT INTO log_craft (playerUID, playerName, playerCash, playerBank, playerInv, type, text, classname, name) VALUES (?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
+Number of Inputs = 9
 
 [jobLog]
-SQL1_1 = INSERT INTO log_job (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
+SQL1_1 = INSERT INTO log_job (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitBank, unitInv, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
+Number of Inputs = 13
 
 [connectionLog]
-SQL1_1 = INSERT INTO log_connection (playerUID, playerName, playerCash, playerBank, type, text, unitUID, unitName, unitCash, unitBank, amount) VALUES (?,?,?,?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11
-Number of Inputs = 11
-
-[speedcamLog]
-SQL1_1 = INSERT INTO log_speedcam (playerUID, playerName, playerCash, playerBank, type, text, speed, price) VALUES (?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
-Number of Inputs = 8
+SQL1_1 = INSERT INTO log_connection (playerUID, playerName, playerCash, playerBank, type, text, amount) VALUES (?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
+Number of Inputs = 7
