--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -613,6 +613,6 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 Number of Inputs = 13
 
 [connectionLog]
-SQL1_1 = INSERT INTO log_connection (playerUID, playerName, playerCash, playerBank, type, text, amount) VALUES (?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
-Number of Inputs = 7
+SQL1_1 = INSERT INTO log_connection (playerUID, playerName, playerCash, playerBank, playerInv, type, text, amount) VALUES (?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8
+Number of Inputs = 8
