--- a/@extDBNP/extdb/sql_custom_v2/rpframework.ini
+++ b/@extDBNP/extdb/sql_custom_v2/rpframework.ini
@@ -479,7 +479,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 Number of Inputs = 6
 
 [insertSLPDTicket]
-SQL1_1 = INSERT INTO slpd_tickets (uid_officer, uid_player, amount, reason, points) VALUES (?,?,?,?,?)
+SQL1_1 = INSERT INTO slpd_tickets (uid_player, uid_officer, amount, reason, points) VALUES (?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5
 Number of Inputs = 5
 
@@ -510,13 +510,13 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_active]
-SQL1_1 = SELECT TOP 30 w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.active=? AND u.connected=1 ORDER BY w.wanted_level DESC, w.id DESC
+SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.active=? AND s.connected=1 ORDER BY w.wanted_level DESC, w.id DESC LIMIT 30
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWanted_uid]
-SQL1_1 = SELECT TOP 30 SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=? AND w.active=? ORDER BY w.wanted_level DESC, w.id ASC
+SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.uid_suspect=? AND w.active=? ORDER BY w.wanted_level DESC, w.id DESC LIMIT 30
 SQL1_INPUTS = 1, 2
 Number of Inputs = 2
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
@@ -528,7 +528,7 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDWantedVehicle_active]
-SQL1_1 = SELECT TOP 30 v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.active=? ORDER BY v.wanted_level DESC, v.id DESC
+SQL1_1 = SELECT v.id, v.plate, v.description, v.uid_officer, u.name, v.reason, v.wanted_level, v.active FROM slpd_wanted_vehicle v JOIN users u ON v.uid_officer=u.uid WHERE v.active=? AND v.date > timestampadd(day, -7, now()) ORDER BY v.wanted_level DESC, v.id DESC LIMIT 30
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
@@ -546,7 +546,7 @@ Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
 [getSLPDticket_uid]
-SQL1_1 = SELECT t.id, t.uid_player, s.name, t.uid_officer, o.name, t.reason, t.amount, t.points FROM slpd_tickets t JOIN users s ON t.uid_player=s.uid JOIN users o ON t.uid_officer=o.uid WHERE t.uid_player=?
+SQL1_1 = SELECT t.id, t.uid_player, s.name, t.uid_officer, o.name, t.reason, t.amount, t.points FROM slpd_tickets t JOIN users s ON t.uid_player=s.uid JOIN users o ON t.uid_officer=o.uid WHERE t.uid_player=? AND t.date > timestampadd(day, -7, now())
 SQL1_INPUTS = 1
 Number of Inputs = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
