--- a/@extDBNP/sql_custom/rpframework.ini
+++ b/@extDBNP/sql_custom/rpframework.ini
@@ -99,9 +99,13 @@ SQL1_INPUTS = 1, 2
 SQL1_1 = UPDATE users SET shopcontent=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 
-[updateConnected]
-SQL1_1 = UPDATE users SET connected=? WHERE uid=?
+[updateConnected_connected]
+SQL1_1 = UPDATE users SET connected=1, name=? WHERE uid=?
 SQL1_INPUTS = 1, 2
+
+[updateConnected_disconnected]
+SQL1_1 = UPDATE users SET connected=0 WHERE uid=?
+SQL1_INPUTS = 1
 
 [updateMafiaATM]
 SQL1_1 = UPDATE mafiaATM SET atm=?
