--- a/@extDBNP/sql_custom/rpframework.ini
+++ b/@extDBNP/sql_custom/rpframework.ini
@@ -412,7 +412,7 @@ SQL1_INPUTS = 1
 
 [updateSLPDPrison_time]
 SQL1_1 = UPDATE slpd_prison SET time_left=? WHERE id=?
-SQL1_INPUTS = 1
+SQL1_INPUTS = 1, 2
 
 [updateSLPDPrison_active]
 SQL1_1 = UPDATE slpd_prison SET active=1 WHERE id=?
@@ -425,6 +425,11 @@ SQL1_INPUTS = 1
 [updateSLPDPrison_finish]
 SQL1_1 = UPDATE slpd_prison SET active=0, time_left=0 WHERE id=?
 SQL1_INPUTS = 1
+
+[getSLPDPrison_active]
+SQL1_1 = SELECT id, uid_player, uid_officer, active, time_prison, time_left, reason FROM slpd_prison WHERE uid_player=? AND active=?
+SQL1_INPUTS = 1, 2
+OUTPUT = 1, 2-String, 3-String, 4, 5, 6, 7-String
 
 [getSLPDWanted_case]
 SQL1_1 = SELECT w.id, w.uid_suspect, s.name, w.uid_officer, o.name, w.charges, w.wanted_level, w.active FROM slpd_wanted w JOIN users s ON w.uid_suspect=s.uid JOIN users o ON w.uid_officer=o.uid WHERE w.id=?
@@ -475,11 +480,6 @@ OUTPUT = 1-String, 2-String, 3, 4, 5, 6, 7, 8, 9, 10
 SQL1_1 = SELECT uid FROM users WHERE name=?
 SQL1_INPUTS = 1
 OUTPUT = 1-String
-
-[getSLPDprison_active]
-SQL1_1 = SELECT id, uid_player, uid_officer, active, time_prison, time_left, reason FROM slpd_prison WHERE uid_player=? AND active=?
-SQL1_INPUTS = 1, 2
-OUTPUT = 1-String, 2-String, 3, 4, 5, 6-String
 
 
 ;; --------------------------------------------------------------------------------
