--- a/@extDBNP/sql_custom/rpframework.ini
+++ b/@extDBNP/sql_custom/rpframework.ini
@@ -224,7 +224,7 @@ SQL1_INPUTS = 1
 ; --------------------------------------------------------------------------------
 
 [insertPlayerInfo]
-SQL1_1 = INSERT INTO users (uid, name, items, cash, bank, cop, ems, position, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
+SQL1_1 = INSERT INTO users (uid, name, items, cash, bank, cop, ems, position, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18
 
 [insertGarage]
