--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -503,7 +503,7 @@ SQL1_1 = INSERT INTO log_cop (playerUID, playerName, playerCash, playerBank, pla
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 
 [deathLog]
-SQL1_1 = INSERT INTO log_death (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitInv, unitBank, weapon, distance) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?)
+SQL1_1 = INSERT INTO log_death (playerUID, playerName, playerCash, playerBank, playerInv, type, text, unitUID, unitName, unitCash, unitBank, unitInv, weapon, distance) VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14
 
 [economyLog]
