--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -410,6 +410,10 @@ SQL1_INPUTS = 1, 2
 SQL1_1 = UPDATE slpd_prison SET active=0 WHERE id=?
 SQL1_INPUTS = 1
 
+[updateSLPDPrison_escape]
+SQL1_1 = UPDATE slpd_prison SET active=0 WHERE uid_player=?
+SQL1_INPUTS = 1
+
 [updateSLPDPrison_time]
 SQL1_1 = UPDATE slpd_prison SET time_left=? WHERE id=?
 SQL1_INPUTS = 1, 2
