Zamykanie spraw na raz

--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -406,6 +406,10 @@ SQL1_INPUTS = 1, 2
 SQL1_1 = UPDATE slpd_wanted_vehicle SET wanted_level=0, active=0, uid_closed=? WHERE id=?
 SQL1_INPUTS = 1, 2
 
+[updateSLPDWantedVehicle_close_all]
+SQL1_1 = UPDATE slpd_wanted_vehicle SET wanted_level=0, active=0, uid_closed=? WHERE plate=?
+SQL1_INPUTS = 1, 2
+
 [updateSLPDPrison_deactive]
 SQL1_1 = UPDATE slpd_prison SET active=0 WHERE id=?
 SQL1_INPUTS = 1
