--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -479,6 +479,11 @@ SQL1_1 = SELECT t.id, t.uid_player, s.name, t.uid_officer, o.name, t.reason, t.a
 SQL1_INPUTS = 1
 OUTPUT = 1, 2-String, 3-String, 4-String, 5-String, 6-String, 7, 8
 
+[getSLPDticket_points]
+SQL1_1 = SELECT SUM(points) FROM slpd_tickets WHERE uid_player = ? AND date > timestampadd(day, -7, now())
+SQL1_INPUTS = 1
+OUTPUT = 1
+
 [getSLPDplayerInfo_uid]
 SQL1_1 = SELECT uid, name, cop, ems, fire, legal, statuses, cash, bank, houselevel FROM users WHERE uid=?
 SQL1_INPUTS = 1
