--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -276,8 +276,8 @@ SQL1_1 = INSERT INTO company_members (id_company, uid_player, level) VALUES (?,?
 SQL1_INPUTS = 1, 2, 3
 
 [insertCompanyVehicle]
-SQL1_1 = INSERT INTO company_garage (id_company, license, class, color, finish, rims, windows, lights, statuses) VALUE (?,?,?,?,?,?,?,?)
-SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9
+SQL1_1 = INSERT INTO company_garage (id_company, license, class, color, finish, rims, windows, lights, statuses, skin) VALUE (?,?,?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10
 
 [updateCompany]
 SQL1_1 = UPDATE companies SET short_name=?, name=?, bank=?, members_current=?, members_max=?, level=? WHERE id=?
@@ -361,7 +361,7 @@ OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8-String, 9-String
 
 [getCompanyVehicle_available]
 SQL1_1 = SELECT license, class, color, finish FROM company_garage WHERE id_company=? AND active=0 AND level<=?;
-SQL1_INPUTS = 1, 2, 3
+SQL1_INPUTS = 1, 2
 OUTPUT = 1-String, 2-String, 3-String, 4-String
 
 [getCompanyVehicle_all]
