--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -360,9 +360,9 @@ SQL1_INPUTS = 1
 OUTPUT = 1-String, 2-String,3-String,4-String,5-String, 6, 7, 8-String, 9-String, 10-String, 11-String
 
 [getCompanyVehicle_available]
-SQL1_1 = SELECT license, class, color, finish FROM company_garage WHERE id_company=? AND active=0 AND level<=?;
+SQL1_1 = SELECT id, license, class, color, finish FROM company_garage WHERE id_company=? AND active=0 AND level<=?;
 SQL1_INPUTS = 1, 2
-OUTPUT = 1-String, 2-String, 3-String, 4-String
+OUTPUT = 1, 2-String, 3-String, 4-String, 5-String
 
 [getCompanyVehicle_all]
 SQL1_1 = SELECT license, class, color, finish, rims, windows, lights, skin, statuses, fuel, damage, level FROM company_garage WHERE id_company=?;
