Variables and company load

--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -344,10 +344,14 @@ SQL1_1 = SELECT id, short_name, name, bank, uid_owner, members_current, members_
 SQL1_INPUTS = 1
 OUTPUT = 1, 2-String, 3-String, 4, 5-String, 6, 7, 8
 
+[getCompany_all]
+SQL1_1 = SELECT id, short_name, name, members_current, members_max FROM companies
+OUTPUT = 1, 2-String, 3-String, 4, 5-String, 6, 7, 8
+
 [getCompany_player]
-SQL1_1 = SELECT companies.id, companies.short_name, companies.name, companies.bank, companies.uid_owner, companies.members_current, companies.members_max, companies.level, company_members.level FROM company_members INNER JOIN companies ON company_members.id_company=companies.id WHERE company_members.uid_player=?
+SQL1_1 = SELECT c.id, c.short_name, c.name, c.bank, c.uid_owner, c.members_current, c.members_max, c.level, m.level, c.variable_name, c.job_name FROM company_members m INNER JOIN companies c ON m.id_company=c.id WHERE m.uid_player=?
 SQL1_INPUTS = 1
-OUTPUT = 1, 2-String, 3-String, 4, 5-String, 6, 7, 8, 9
+OUTPUT = 1, 2-String, 3-String, 4, 5-String, 6, 7, 8, 9, 10-String, 11-String
 
 [getCompanyApplicant_all]
 SQL1_1 = SELECT company_applicants.id, company_applicants.id_company, company_applicants.uid_player, users.name FROM company_applicants INNER JOIN users ON company_applicants.uid_player=users.uid WHERE company_applicants.id_company=?
