--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -173,8 +173,8 @@ SQL1_1 = UPDATE garage SET color=?, finish=?, rims=?, windows=?, lights=? WHERE 
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 
 [weatherUpdate]
-SQL1_1 = UPDATE weather SET date=?, hour=?, weather=?, wind=? WHERE id=?
-SQL1_INPUTS = 1, 2, 3, 4, 5
+SQL1_1 = UPDATE weather SET date=?, hour=?, weather=?, wind=?, fog=? WHERE id=?
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 ; --------------------------------------------------------------------------------
 ; SELECT
 ; --------------------------------------------------------------------------------
