--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -172,6 +172,22 @@ SQL1_INPUTS = 1, 2
 SQL1_1 = UPDATE garage SET color=?, finish=?, rims=?, windows=?, lights=? WHERE license=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6
 
+[updateExpLevel]
+SQL1_1 = UPDATE users SET exp_level=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+
+[updateExpTotal]
+SQL1_1 = UPDATE users SET exp_total=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+
+[updateExpPerkPoints]
+SQL1_1 = UPDATE users SET exp_perkPoints=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+
+[updateExpPerks]
+SQL1_1 = UPDATE users SET exp_perks=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+
 ; --------------------------------------------------------------------------------
 ; SELECT
 ; --------------------------------------------------------------------------------
@@ -218,6 +234,11 @@ SQL1_INPUTS = 1
 [existLicense]
 SQL1_1 = SELECT CASE WHEN EXISTS(SELECT * FROM garage WHERE license = ?) THEN 'true' ELSE 'false' END
 SQL1_INPUTS = 1
+
+[getExp]
+SQL1_1 = SELECT exp_level, exp_total, exp_perkPoints, exp_perks FROM users WHERE uid=?
+SQL1_INPUTS = 1
+OUTPUT = 1, 2, 3, 4
 
 ; --------------------------------------------------------------------------------
 ; INSERT
