--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -568,3 +568,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13
 [connectionLog]
 SQL1_1 = INSERT INTO log_connection (playerUID, playerName, playerCash, playerBank, playerInv, type, text) VALUES (?,?,?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
+
+[haxLog]
+SQL1_1 = INSERT INTO log_hax (playerUID, playerName, playerCash, playerBank, playerInv, type, text) VALUES (?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
