NO TO TERAZ BĘDZIE!

--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -572,3 +572,7 @@ SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
 [haxLog]
 SQL1_1 = INSERT INTO log_hax (playerUID, playerName, playerCash, playerBank, playerInv, type, text) VALUES (?,?,?,?,?,?,?)
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
+
+[haxLogRandom]
+SQL1_1 = INSERT INTO log_hax_random (playerUID, playerName, playerCash, playerBank, playerInv, type, text) VALUES (?,?,?,?,?,?,?)
+SQL1_INPUTS = 1, 2, 3, 4, 5, 6, 7
