FBI oddzielone on pracy policjanta, usuniecie itemow ze skrzynek na komendzie

--- a/SERWER #1/@extDBNP/sql_custom/rpframework.ini
+++ b/SERWER #1/@extDBNP/sql_custom/rpframework.ini
@@ -168,6 +168,10 @@ SQL1_INPUTS = 1, 2
 SQL1_1 = UPDATE users SET legal=? WHERE uid=?
 SQL1_INPUTS = 1, 2
 
+[promoteFBI]
+SQL1_1 = UPDATE users SET fbi=? WHERE uid=?
+SQL1_INPUTS = 1, 2
+
 [vehicleChangeColor]
 SQL1_1 = UPDATE garage SET color=?, finish=?, rims=?, windows=?, lights=? WHERE license=?
 SQL1_INPUTS = 1, 2, 3, 4, 5, 6
@@ -193,9 +197,9 @@ SQL1_INPUTS = 1, 2
 ; --------------------------------------------------------------------------------
 
 [playerInfo]
-SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, doughnuts, respawn FROM users WHERE uid=?
+SQL1_1 = SELECT items, cash, bank, cop, ems, position, bankaccount, phoneBackground, messages, statuses, houselevel, housecontent, shopcontent, shopname, mafia, fire, legal, doughnuts, respawn, fbi FROM users WHERE uid=?
 SQL1_INPUTS = 1
-OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19
+OUTPUT = 1,2,3,4,5,6,7,8,9,10,11,12,13,14-String,15,16,17,18,19, 20
 
 [getLicense]
 SQL1_1 = SELECT license, class, color, owner FROM garage WHERE license=?;
